@@ -35,7 +35,7 @@
     global $zm_categories;
 
         $tree = $zm_categories->getCategoryTree();
-        $catTree = zm_catalog_tree($tree, '&fkt=zm_pa_admin');
+        $catTree = zm_catalog_tree($tree, '&fkt=zm_pa_admin', true);
         $pp = new ZMPluginPage('zm_pa_admin', zm_l10n_get('Product Associations'), $catTree);
         // so what??
         $header = '<link rel="stylesheet" type="text/css" href="includes/jquery/jquery.treeview.css">';
