@@ -1,6 +1,7 @@
 Release 0.8.7
 - move cache manager page from core to zm_page_cache plugin
 - added ZMShoppingCartItem::getProduct()
+- make zm_catalog_tree support displaying products
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
